[package]
name = "prandium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.5"
pulldown-cmark = "0.9.2"
glob = "0.3.0"
serde_json = "1.0.82"
rusqlite = { version = "0.28.0", features = ["bundled"] }
regex = "1.6.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
